--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/base.css">
+    <script src="https://kit.fontawesome.com/4424b3eb3c.js" crossorigin="anonymous"></script>
     <title>Flothe</title>
 </head>
 <body>
