--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/4424b3eb3c.js" crossorigin="anonymous"></script>
     <title>Flothe</title>
 </head>
