--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/4424b3eb3c.js" crossorigin="anonymous"></script>
+<!--    <script src="https://kit.fontawesome.com/4424b3eb3c.js" crossorigin="anonymous"></script>-->
     <title>Flothe</title>
 </head>
 <body>
